# notepad

./: .gitignore  README.md  your-script.sh
.bash_scripts/: create_all_files_for_auto_header_generation.sh  generate_header.py  header.txt  update_header.sh
MyLeetCodeAns/: .cproject  .project
MyLeetCodeAns/src/: add_two_numbers_solution.hpp  longest_substring_without_repeating_characters.hpp  main.cpp  median_of_two_sorted_arrays.hpp  two_sum_solution.hpp
Notepad/: CMakeLists.txt  notepad.cpp  notepad.hpp  notepad.ui
Notepad_Tutorial/Notepad/: CMakeLists.txt  main.cpp  notepad.cpp  notepad.hpp  notepad.ui
Notepad_Tutorial/build-Notepad-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt
QtQuick_Application_Tutorial/QtQuickAppTute/: CMakeLists.txt  Page.qml  main.cpp
QtQuick_Application_Tutorial/build-QtQuickAppTute-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appqtquickapptute_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
TextFinder_Tutorial/TextFinder/: CMakeLists.txt  input.txt  main.cpp  textfinder.cpp  textfinder.hpp  textfinder.ui  textfinder.ui.autosave
TextFinder_Tutorial/build-TextFinder-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Notepad-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Notepad-Qt_6_6_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-Notepad-Qt_6_6_0_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-Notepad-Qt_6_6_0_for_macOS-Debug/Notepad_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-notepad-Qt_6_6_0_for_macOS-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-notepad-Qt_6_6_0_for_macOS-Release/.qt/: QtDeploySupport.cmake
build-notepad-Qt_6_6_0_for_macOS-Release/.qtc_clangd/: compile_commands.json
build-notepad-Qt_6_6_0_for_macOS-Release/.rcc/: notepad.qrc  qrc_notepad.cpp
build-notepad-Qt_6_6_0_for_macOS-Release/notepad_autogen/: deps  moc_predefs.h
build-zeros_world-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  zeros_worldApp
build-zeros_world-Qt_6_6_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-zeros_world-Qt_6_6_0_for_macOS-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_zeros_worldApp.cmake  Qt6_QmlPlugins_Imports_zeros_worldApp.rsp
build-zeros_world-Qt_6_6_0_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-zeros_world-Qt_6_6_0_for_macOS-Debug/.rcc/: configuration.qrc  qmake_Main.qrc  qrc_configuration.cpp  qrc_qmake_Main.cpp  qrc_zeros_worldApp_raw_qml_0.cpp  zeros_worldApp_raw_qml_0.qrc
build-zeros_world-Qt_6_6_0_for_macOS-Debug/content/: cmake_install.cmake
build-zeros_world-Qt_6_6_0_for_macOS-Debug/imports/: cmake_install.cmake
notepad/: notepad.ui.autosave
notepad/images/: notepad_logo.icns
templates/: file_header_template.txt  pre-commit  readMeTemplate.txt
zeros_world/: CMakeLists.txt  qmlmodules  zeros_world.qmlproject
(+1106 files in other folders)
